--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -1030,7 +1030,8 @@ dtb-$(CONFIG_ARCH_ZYNQ) += \
 	ni-77D6.dtb \
 	ni-7885.dtb \
 	ni-793C.dtb \
-	ni-bluefin.dtb
+	ni-bluefin.dtb \
+	ni-fielddaq.dtb
 dtb-$(CONFIG_MACH_ARMADA_370) += \
 	armada-370-db.dtb \
 	armada-370-dlink-dns327l.dtb \
